...
    android:orientation="vertical"
    tools:visibility="visible">



    <Button
        android:id="@+id/addEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:text="@string/add_event"
        android:textAlignment="center"
...
